    and uses compiled-in TCL code if OMNETPP_TKENV_DIR is undefined at
    compile-time.
#74 August 14, 1998
  - bugfixes
#74a August 17, 1998
  - dialog centering and focus problems fixed (or alleviated) on Windows
  - icon loading improved
#74b August 23, 1998
  - small fixes; widgets.tcl updated
#75 Dec 27, 1998
  - updated for sim170
  - cPacket inspector added
  - setType() moved to tklib.h/.cc for easy reuse
  - makefile renamed to makefile.in
  - stack usage statistics added to simple module inspector
  - runningModule() corrected to contextModule()
#76a-c Jan 25, 1999
  - inspector factories added
  - updated for sim172b
  - plugin support: automatically loads .tcl and .so files placed in the
    tkenv/plugins directory. Intended use: inspectors for custom classes.
#77a Feb 7, 1999
  - fixed bug in outvector-window (caused div by zero)
  - cMessage and cPacket inspector redesigned
  - fixed minor bug with anim speed settings
#78 Feb 7, 1999
  - stable version
#79 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
  - tcl2c.c moved to util/
July 10, 1999
  - arrow.cc updated from GNED (enhancement: default value of anchors are now 50%)
  - widgets.tcl updated from GNED
  - modinsp2.tcl: removed potential sources of division by zero
  - fixed a problem in printptr() [tklib.cc] which caused a crash on Sun
  - now demands at least Tcl/Tk 8.0 patchlevel 1
July 11-13, 1999
  - icons.tcl added; textual toolbar icons replaced with graphics icons
  - note: because the name of each inspector window is unique,
    the help_tips() array grows monotonously as one opens new and new
    inspector windows. The array is NOT cleaned up after closing an insp.
    window. In everyday use this small memory leak cannot be a problem.
  - TO DO: spaces to be added between icons
  - widgets.tcl edited --> copy it to other subdirs